--- a/templates/books/resources.html
+++ b/templates/books/resources.html
@@ -26,7 +26,8 @@
                             <li class="nav-item"><a class="nav-link active" href="/books">Resources</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Discuss</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Homework</a></li>
-                        </ul><a class="btn btn-primary shadow" role="button" href="/user/loginpage">Log In</a>
+                        </ul>
+                        {% if user.is_authenticated %}<a class="btn btn-primary shadow" role="button" href="/user/logout">Log Out</a>{% else %}<a class="btn btn-primary shadow" role="button" href="/user/loginpage">Log In</a>{% endif %}
                     </div>
         </div>
     </nav>
