--- a/templates/index.html
+++ b/templates/index.html
@@ -26,12 +26,13 @@
                     <li class="nav-item"><a class="nav-link" href="/books">Resources</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Discuss</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Homework</a></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="/user/loginpage">Log In</a>
+                </ul>
+                {% if user.is_authenticated %}<a class="btn btn-primary shadow" role="button" href="/user/logout">Log Out</a>{% else %}<a class="btn btn-primary shadow" role="button" href="/user/loginpage">Log In</a>{% endif %}
             </div>
         </div>
     </nav>
-    <header class="bg-primary-gradient pt-5">
-        <div class="container pt-4 pt-xl-5">
+    <header class="bg-primary-gradient">
+        <div class="container pt-5 pt-xl-5">
             <div class="row pt-5">
                 <div class="col-12 text-center d-lg-flex justify-content-center align-items-center align-content-center">
                     <h1 class="display-4 text-uppercase fw-bolder text-center text-success border rounded-0 shadow-sm">Collegeworks</h1>
