--- a/templates/user/signup profile.html
+++ b/templates/user/signup profile.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a class="nav-link" href="/books">Resources</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Discuss</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Homework</a></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="/user/loginpage">Log In</a>
+                </ul><a class="btn btn-primary shadow" role="button" href="/user/logout">Log Out</a>
             </div>
         </div>
     </nav>
@@ -42,14 +42,14 @@
                 <div class="col-md-6 col-xl-4">
                     <div class="card">
                         <div class="card-body text-center d-flex flex-column align-items-center">
-                            <form method="post">
-                                <div class="mb-3"><input class="form-control" type="email" name="phone" placeholder="Phone Number" required=""></div>
-                                <div class="mb-3"><input class="form-control" type="email" name="age" placeholder="Age" required=""></div>
-                                <div class="mb-3"><input class="form-control" type="password" name="about" placeholder="About You" required=""></div>
-                                <div class="form-check form-switch form-check-inline"><input class="form-check-input" type="checkbox" id="formCheck-1" name="student"><label class="form-check-label" for="formCheck-1">Are You A Student ?</label></div>
+                            <form method="post" action="/user/profileupdate/"> {% csrf_token %}
+                                <div class="mb-3"><input class="form-control" type="text" name="phone" placeholder="Phone Number" required=""></div>
+                                <div class="mb-3"><input class="form-control" type="Number" name="age" placeholder="Age" required=""></div>
+                                <div class="mb-3"><input class="form-control" type="text" name="about" placeholder="About You" required=""></div>
+                                <div class="form-check form-switch form-check-inline"><input class="form-check-input" type="checkbox" id="formCheck-1" name="is_student"><label class="form-check-label" for="formCheck-1">Are You A Student ?</label></div>
                                 <div class="mb-3"></div>
                                 <div class="mb-3"><button class="btn btn-primary shadow d-block w-100" type="submit">Save Details</button></div>
-                                <p class="text-muted">&nbsp;<a href="login.html">Skip For Now</a></p>
+                                <p class="text-muted">&nbsp;<a href="/">Skip For Now</a></p>
                             </form>
                         </div>
                     </div>
