--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -116,7 +116,7 @@
                             </li>
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">Your Name</span><img class="border rounded-circle img-profile" src="{% static 'assets/img/avatars/avatar5.jpeg' %}"></a>
+                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">{{userd.fname}} {{userd.lname}}</span><img class="border rounded-circle img-profile" src="{% static 'assets/img/avatars/avatar5.jpeg' %}"></a>
                                     <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
                                         <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
                                     </div>
@@ -137,36 +137,6 @@
                             <div class="card shadow mb-4"></div>
                         </div>
                         <div class="col-lg-8">
-                            <div class="row mb-3 d-none">
-                                <div class="col">
-                                    <div class="card textwhite bg-primary text-white shadow">
-                                        <div class="card-body">
-                                            <div class="row mb-2">
-                                                <div class="col">
-                                                    <p class="m-0">Peformance</p>
-                                                    <p class="m-0"><strong>65.2%</strong></p>
-                                                </div>
-                                                <div class="col-auto"><i class="fas fa-rocket fa-2x"></i></div>
-                                            </div>
-                                            <p class="text-white-50 small m-0"><i class="fas fa-arrow-up"></i>&nbsp;5% since last month</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="card textwhite bg-success text-white shadow">
-                                        <div class="card-body">
-                                            <div class="row mb-2">
-                                                <div class="col">
-                                                    <p class="m-0">Peformance</p>
-                                                    <p class="m-0"><strong>65.2%</strong></p>
-                                                </div>
-                                                <div class="col-auto"><i class="fas fa-rocket fa-2x"></i></div>
-                                            </div>
-                                            <p class="text-white-50 small m-0"><i class="fas fa-arrow-up"></i>&nbsp;5% since last month</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                             <div class="row">
                                 <div class="col">
                                     <div class="card shadow mb-3">
@@ -177,20 +147,20 @@
                                             <form>
                                                 <div class="row">
                                                     <div class="col">
-                                                        <div class="mb-3"><label class="form-label" for="username"><strong>Username</strong></label><input class="form-control" type="text" id="username" placeholder="user.name" name="username"></div>
+                                                        <div class="mb-3"><label class="form-label" for="username"><strong>Username</strong></label><input class="form-control" type="text" id="username" placeholder="user.name" name="username" value="{{request.user.username}}"></div>
                                                     </div>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col">
                                                         <div class="row">
                                                             <div class="col">
-                                                                <div class="mb-3"><label class="form-label" for="first_name"><strong>First Name</strong></label><input class="form-control" type="text" id="first_name" placeholder="John" name="first_name"></div>
+                                                                <div class="mb-3"><label class="form-label" for="first_name"><strong>First Name</strong></label><input class="form-control" type="text" id="first_name" placeholder="John" name="first_name" value="{{userd.fname}}"></div>
                                                             </div>
                                                             <div class="col">
-                                                                <div class="mb-3"><label class="form-label" for="last_name"><strong>Last Name</strong></label><input class="form-control" type="text" id="last_name" placeholder="Doe" name="last_name"></div>
+                                                                <div class="mb-3"><label class="form-label" for="last_name"><strong>Last Name</strong></label><input class="form-control" type="text" id="last_name" placeholder="Doe" name="last_name" value="{{userd.lname}}"></div>
                                                             </div>
                                                         </div>
-                                                        <div class="mb-3"><label class="form-label" for="about"><strong>About</strong></label><input class="form-control" type="text" id="username-2" placeholder="About Yourself" name="about"></div>
+                                                        <div class="mb-3"><label class="form-label" for="about"><strong>About</strong></label><input class="form-control" type="text" id="username-2" placeholder="About Yourself" name="about" value="{{userd.about}}"></div>
                                                     </div>
                                                 </div>
                                                 <div class="mb-3"><button class="btn btn-primary btn-sm" type="submit">Save Settings</button></div>
@@ -203,96 +173,66 @@
                                         </div>
                                         <div class="card-body">
                                             <form>
-                                                <div class="mb-3"><label class="form-label" for="address"><strong>Email</strong></label><input class="form-control" type="text" id="address" placeholder="info@example.com" name="email"></div>
+                                                <div class="mb-3"><label class="form-label" for="address"><strong>Email</strong></label><input class="form-control" type="text" id="address" placeholder="info@example.com" name="email" value="{{request.user.email}}"></div>
                                                 <div class="row">
                                                     <div class="col">
-                                                        <div class="mb-3"><label class="form-label" for="city"><strong>Phone Number</strong></label><input class="form-control" type="text" id="city" name="phone" placeholder="+91 "></div>
+                                                        <div class="mb-3"><label class="form-label" for="city"><strong>Phone Number</strong></label><input class="form-control" type="text" id="city" name="phone" placeholder="+91 " value="{{userd.phone}}"></div>
                                                     </div>
                                                 </div>
                                                 <div class="mb-3"><button class="btn btn-primary btn-sm" type="submit">Save&nbsp;Settings</button></div>
                                             </form>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card shadow mb-5">
-                        <div class="card-header py-3">
-                            <p class="text-primary m-0 fw-bold">Student Settings</p>
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <form>
-                                        <div class="mb-3">
-                                            <div class="form-check form-switch"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="student"><strong>Are You A Student ?</strong></label></div>
+                                    <div class="card shadow mt-3">
+                                        <div class="card-header py-3">
+                                            <p class="text-primary m-0 fw-bold">Student Settings</p>
                                         </div>
-                                        <div class="mb-3"><button class="btn btn-primary btn-sm" type="submit">Save Settings</button></div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-8">
-                    <div class="row mb-3 d-none">
-                        <div class="col">
-                            <div class="card textwhite bg-primary text-white shadow">
-                                <div class="card-body">
-                                    <div class="row mb-2">
-                                        <div class="col">
-                                            <p class="m-0">Peformance</p>
-                                            <p class="m-0"><strong>65.2%</strong></p>
-                                        </div>
-                                        <div class="col-auto"><i class="fas fa-rocket fa-2x"></i></div>
-                                    </div>
-                                    <p class="text-white-50 small m-0"><i class="fas fa-arrow-up"></i>&nbsp;5% since last month</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card textwhite bg-success text-white shadow">
-                                <div class="card-body">
-                                    <div class="row mb-2">
-                                        <div class="col">
-                                            <p class="m-0">Peformance</p>
-                                            <p class="m-0"><strong>65.2%</strong></p>
-                                        </div>
-                                        <div class="col-auto"><i class="fas fa-rocket fa-2x"></i></div>
-                                    </div>
-                                    <p class="text-white-50 small m-0"><i class="fas fa-arrow-up"></i>&nbsp;5% since last month</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-auto m-auto">
-                            <div class="card shadow mb-3">
-                                <div class="card-header py-3">
-                                    <p class="text-primary m-0 fw-bold">Student Details</p>
-                                </div>
-                                <div class="card-body">
-                                    <form>
-                                        <div class="row">
-                                            <div class="col">
-                                                <div class="mb-3"><label class="form-label" for="college"><strong>College</strong><br></label><input class="form-control" type="text" id="first_name-1" placeholder="XYZ College" name="college" required=""></div>
-                                                <div class="row">
-                                                    <div class="col"><label class="form-label fw-bold">Year</label><select class="form-select" name="year" required="">
-                                                            <option value="First" selected="">First</option>
-                                                            <option value="Second">Second</option>
-                                                            <option value="Third">Third</option>
-                                                            <option value="Fourth">Fourth</option>
-                                                            <option value="Fifth">Fifth</option>
-                                                        </select></div>
+                                        <div class="card-body">
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <form>
+                                                        <div class="mb-3">
+                                                            {% if userd.student == True %}
+                                                            <div class="form-check form-switch"><input class="form-check-input" type="checkbox" id="formCheck-1" checked><label class="form-check-label" for="student"><strong>Are You A Student ?</strong></label></div>
+                                                            {% else %}
+                                                            <div class="form-check form-switch"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="student"><strong>Are You A Student ?</strong></label></div>
+                                                            {% endif %}
+                                                        </div>
+                                                        <div class="mb-3"><button class="btn btn-primary btn-sm" type="submit">Save Settings</button></div>
+                                                    </form>
                                                 </div>
                                             </div>
-                                            <div class="col">
-                                                <div class="mb-3"><label class="form-label" for="branch"><strong>Branch</strong></label><input class="form-control" type="text" id="last_name-1" placeholder="XYZ Branch" name="branch" required=""></div>
-                                            </div>
                                         </div>
-                                        <div class="mb-3"><button class="btn btn-primary btn-sm" type="submit">Save Settings</button></div>
-                                    </form>
+                                    </div>
+                                    {% if userd.student == True %}
+                                    <div class="card shadow mt-3">
+                                        <div class="card-header py-3">
+                                            <p class="text-primary m-0 fw-bold">Student Details</p>
+                                        </div>
+                                        <div class="card-body">
+                                            <form>
+                                                <div class="row">
+                                                    <div class="col">
+                                                        <div class="mb-3"><label class="form-label" for="college"><strong>College</strong><br></label><input class="form-control" type="text" id="first_name-1" placeholder="XYZ College" name="college" required=""></div>
+                                                        <div class="row">
+                                                            <div class="col"><label class="form-label fw-bold">Year</label><select class="form-select" name="year" required="">
+                                                                    <option value="First" selected="">First</option>
+                                                                    <option value="Second">Second</option>
+                                                                    <option value="Third">Third</option>
+                                                                    <option value="Fourth">Fourth</option>
+                                                                    <option value="Fifth">Fifth</option>
+                                                                </select></div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col">
+                                                        <div class="mb-3"><label class="form-label" for="branch"><strong>Branch</strong></label><input class="form-control" type="text" id="last_name-1" placeholder="XYZ Branch" name="branch" required=""></div>
+                                                    </div>
+                                                </div>
+                                                <div class="mt-3"><button class="btn btn-primary btn-sm" type="submit">Save Settings</button></div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
