--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -15,7 +15,7 @@
     <div id="wrapper">
         <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
             <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="/">
-                    <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-laugh-wink"></i></div>
+                    <div class="sidebar-brand-icon"><img src="{% static 'logo.png' %}" width="40" height="40" alt=""></div>
                     <div class="sidebar-brand-text mx-3"><span>COLLEGEWORKS</span></div>
                 </a>
                 <hr class="sidebar-divider my-0">
