--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -73,8 +73,8 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
-                        <li><a href="/">Team</a></li>
-                        <li><a href="/">Developer</a></li>
+                        <li><a href="/#team-details">Team</a></li>
+                        <li><a href="/#team-details">Developer</a></li>
                         <li></li>
                     </ul>
                 </div>
