--- a/templates/books/resources.html
+++ b/templates/books/resources.html
@@ -32,58 +32,89 @@
     </nav>
     <section class="py-5 mt-5">
         <div class="container py-5">
-            <div class="row mb-4 mb-lg-5">
+            <div class="row">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
                     <h2 class="fw-bold text-danger">Study Resources</h2>
                     <p class="text-muted w-lg-50">Get Everything from Books to Assignments to PYQs to Courses &amp; Links</p>
                 </div>
             </div>
-            <div class="carousel slide" data-bs-ride="carousel" id="carousel-1">
-                <div class="carousel-inner">
-                    <div class="carousel-item active"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
-                    <div class="carousel-item"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
-                    <div class="carousel-item"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
-                </div>
-                <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
-                <ol class="carousel-indicators">
-                    <li data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></li>
-                    <li data-bs-target="#carousel-1" data-bs-slide-to="1"></li>
-                    <li data-bs-target="#carousel-1" data-bs-slide-to="2"></li>
-                </ol>
-            </div>
             <section class="photo-gallery py-4 py-xl-5" id="initial-categories">
                 <div class="container">
-                    <div class="row mb-5">
-                        <div class="col-md-8 col-xl-6 text-center mx-auto">
-                            <h2 class="text-capitalize fs-2 fw-normal text-center text-primary">Top Categories</h2>
-                        </div>
-                    </div>
                     <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-2 photos" data-bss-baguettebox="">
-                        <div class="col item"><h2 class="text-capitalize fs-2 fw-normal text-center text-secondary">Physics</h2><a href="/books/category/physics"><img class="img-fluid" src="{% static 'assets2/img/products/physics.jpg' %}"></a></div>
-                        <div class="col item"><h2 class="text-capitalize fs-2 fw-normal text-center text-secondary">Chemistry</h2><a href="/books/category/chemistry"><img class="img-fluid" src="{% static 'assets2/img/products/chemistry.jpg' %}"></a></div>
-                        <div class="col item"><h2 class="text-capitalize fs-2 fw-normal text-center text-secondary">Mathematics</h2><a href="/books/category/maths"><img class="img-fluid" src="{% static 'assets2/img/products/maths.jpg' %}"></a></div>
-                        <div class="col item"><h2 class="text-capitalize fs-2 fw-normal text-center text-secondary">Courses</h2><a href="/books/category/courses"><img class="img-fluid" src="{% static 'assets2/img/products/courses.jpg' %}"></a></div>
-                    </div>
-                    <div class="col-md-12 mt-2">
-                        <div class="row text-center">
-                            <div class="col-md-12"><button class="btn btn-primary" type="button" id="catbtn">View All Categories</button></div>
-                        </div>
+                        <div class="col item"><a href="/books/category/physics"><img class="img-fluid" src="{% static 'assets2/img/products/physics.jpg' %}"></a></div>
+                        <div class="col item"><a href="/books/category/chemistry"><img class="img-fluid" src="{% static 'assets2/img/products/chemistry.jpg' %}"></a></div>
+                        <div class="col item"><a href="/books/category/maths"><img class="img-fluid" src="{% static 'assets2/img/products/maths.jpg' %}"></a></div>
+                        <div class="col item"><a href="/books/category/courses"><img class="img-fluid" src="{% static 'assets2/img/products/courses.jpg' %}"></a></div>
                     </div>
                 </div>
             </section>
-            <section class="py-4 py-xl-5" id="final-categories" style="display:none;">
+            <section class="py-4 py-xl-5" id="final-categories">
                 <div class="container">
                     <div class="row mb-5">
                         <div class="col-md-8 col-xl-6 text-center mx-auto">
-                            <h2 class="text-capitalize fs-2 fw-normal text-center text-primary">All Categories</h2>
+                            <h2 class="text-capitalize fs-2 fw-normal text-center text-primary underlined"><u>Available Subjects</u></h2>
                         </div>
                     </div>
-                    <div class="row gx-3 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-4">
-                        <div class="col item"><a href="/books/category/physics"><h2 class="text-capitalize fs-2 fw-normal text-center text-info shadow p-3 mb-5 bg-body rounded">Physics</h2></a></div>
-                        <div class="col item"><a href="/books/category/chemistry"><h2 class="text-capitalize fs-2 fw-normal text-center text-info shadow p-3 mb-5 bg-body rounded">Chemistry</h2></a></div>
-                        <div class="col item"><a href="/books/category/maths"><h2 class="text-capitalize fs-2 fw-normal text-center text-info shadow p-3 mb-5 bg-body rounded">Mathematics</h2></a></div>
-                        <div class="col item"><a href="/books/category/courses"><h2 class="text-capitalize fs-2 fw-normal text-center text-info shadow p-3 mb-5 bg-body rounded">Courses</h2></a></div>
+                    {% if first|length > 0 %}
+                    <div class="col-md-8 col-xl-6 text-center mx-auto">
+                        <h2 class="text-capitalize fs-2 fw-normal text-center text-success underlined">First Year</h2>
                     </div>
+                    <div class="row gx-3 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-4 shadow-sm p-3 mb-5 bg-white rounded border">
+                        {% for subject in first %}
+                        <div class="col item"><a href="/books/category/{{subject}}"><h4 class="text-capitalize text-center text-info shadow-sm p-3 mb-5 bg-body rounded">{{subject}}</h4></a></div>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    {% if second|length > 0 %}
+                    <div class="col-md-8 col-xl-6 text-center mx-auto">
+                        <h2 class="text-capitalize fs-2 fw-normal text-center text-success underlined">Second Year</h2>
+                    </div>
+                    <div class="row gx-3 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-4 shadow-sm p-3 mb-5 bg-white rounded border">
+                        {% for subject in second %}
+                        <div class="col item"><a href="/books/category/{{subject}}"><h4 class="text-capitalize text-center text-info shadow-sm p-3 mb-5 bg-body rounded">{{subject}}</h4></a></div>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    {% if third|length > 0 %}
+                    <div class="col-md-8 col-xl-6 text-center mx-auto">
+                        <h2 class="text-capitalize fs-2 fw-normal text-center text-success underlined">Third Year</h2>
+                    </div>
+                    <div class="row gx-3 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-4 shadow-sm p-3 mb-5 bg-white rounded border">
+                        {% for subject in third %}
+                        <div class="col item"><a href="/books/category/{{subject}}"><h4 class="text-capitalize text-center text-info shadow-sm p-3 mb-5 bg-body rounded">{{subject}}</h4></a></div>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    {% if fourth|length > 0 %}
+                    <div class="col-md-8 col-xl-6 text-center mx-auto">
+                        <h2 class="text-capitalize fs-2 fw-normal text-center text-success underlined">Fourth Year</h2>
+                    </div>
+                    <div class="row gx-3 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-4 shadow-sm p-3 mb-5 bg-white rounded border">
+                        {% for subject in fourth %}
+                        <div class="col item"><a href="/books/category/{{subject}}"><h4 class="text-capitalize text-center text-info shadow-sm p-3 mb-5 bg-body rounded">{{subject}}</h4></a></div>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    {% if fifth|length > 0 %}
+                    <div class="col-md-8 col-xl-6 text-center mx-auto">
+                        <h2 class="text-capitalize fs-2 fw-normal text-center text-success underlined">Fifth Year</h2>
+                    </div>
+                    <div class="row gx-3 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-4 shadow-sm p-3 mb-5 bg-white rounded border">
+                        {% for subject in fifth %}
+                        <div class="col item"><a href="/books/category/{{subject}}"><h4 class="text-capitalize text-center text-info shadow-sm p-3 mb-5 bg-body rounded">{{subject}}</h4></a></div>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    {% if sixth|length > 0 %}
+                    <div class="col-md-8 col-xl-6 text-center mx-auto">
+                        <h2 class="text-capitalize fs-2 fw-normal text-center text-success underlined">Sixth Year</h2>
+                    </div>
+                    <div class="row gx-3 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-4 shadow-sm p-3 mb-5 bg-white rounded border">
+                        {% for subject in sixth %}
+                        <div class="col item"><a href="/books/category/{{subject}}"><h4 class="text-capitalize text-center text-info shadow-sm p-3 mb-5 bg-body rounded">{{subject}}</h4></a></div>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
                 </div>
             </section>
         </div>
