--- a/templates/discuss/discusshome.html
+++ b/templates/discuss/discusshome.html
@@ -81,13 +81,15 @@
     <section class="py-4 py-xl-4 bg-light mt-5">
         <h2 class="text-center text-primary mb-4" style="font-weight: bold;font-style: italic;">Latest Doubts</h2>
         <div class="container">
-            <div class="bg-white border rounded d-flex flex-column justify-content-between flex-lg-row p-4" style="padding: 5px;">
+            {% for doubt in latest %}
+            <div class="mt-3 bg-white border rounded d-flex flex-column justify-content-between flex-lg-row p-4" style="padding: 5px;">
                 <div>
-                    <h4 class="fw-bold mb-2">Here goes the Question Title</h4>
-                    <p class="mb-0" style="width: 292.3px;">Asked By&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Asked On</p>
+                    <h4 class="fw-bold mb-2">{{doubt.title}}</h4>
+                    <p class="mb-0">Asked By {{doubt.author}}&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Asked On {{doubt.time}}</p>
                 </div>
-                <div class="my-1"><a class="btn btn-primary fs-6 py-2 px-4" role="button" href="#">View</a></div>
+                <div class="my-1"><a class="btn btn-primary fs-6 py-2 px-4" role="button" href="/discuss/qn/{{doubt.id}}">View</a></div>
             </div>
+            {% endfor %}
         </div>
         <div class="row">
             <div class="col text-center pt-2"><a class="fs-5 fw-normal link-success" href="#"><u>View More</u></a></div>
@@ -99,7 +101,7 @@
             <div class="bg-white border rounded d-flex flex-column justify-content-between flex-lg-row p-4" style="padding: 5px;">
                 <div class="pb-1 pb-lg-1">
                     <h4 class="fw-bold mb-2">Here goes the Question Title</h4>
-                    <p class="mb-0" style="width: 292.3px;">Asked By&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Asked On</p>
+                    <p class="mb-0">Asked By&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Asked On</p>
                 </div>
                 <div class="my-1"><a class="btn btn-primary fs-6 py-2 px-4" role="button" href="#">View</a></div>
             </div>
