--- a/templates/books/subject.html
+++ b/templates/books/subject.html
@@ -46,7 +46,7 @@
             <li class="nav-item">
               <a class="nav-link active" href="/books">Resources</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Discuss</a></li>
+            <li class="nav-item"><a class="nav-link" href="/discuss">Discuss</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Homework</a></li>
           </ul>
           {% if user.is_authenticated %}<a
