--- a/templates/discuss/discusshome.html
+++ b/templates/discuss/discusshome.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="/#our-services">Services</a></li>
                     <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link" href="/books">Resources</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">Discuss</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/discuss">Discuss</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Homework</a></li>
                 </ul>
                 {% if user.is_authenticated %}<a class="navbar-brand d-flex align-items-center" href="/profile"><img src="{% static 'usericon.png' %}" width="40" height="40"></a><a class="btn btn-primary shadow" role="button" href="/user/logout">Log Out</a>{% else %}<a class="btn btn-primary shadow" role="button" href="/user/loginpage">Log In</a>{% endif %}
@@ -72,7 +72,7 @@
                     <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
                         <div class="d-flex features-icons-icon" style="margin-top: 14px;margin-bottom: 15px;"><i class="icon-like fs-1 text-primary m-auto text-primary" data-bss-hover-animate="pulse" style="height: 40px;max-height: 50px;width: 50px;font-size: 50px;"></i></div>
                         <h3 class="fw-normal" style="font-size: 30px;">Upvote Answers</h3>
-                        <p class="lead fw-lighter mb-0" style="margin-top: 15px;font-size: 20px;">If you find the solution good, upvote it so that it shows higher in the list</p>
+                        <p class="lead fw-lighter mb-0" style="margin-top: 15px;font-size: 20px;">If you find the solution good, upvote it so that it shows higher in the relevancy list</p>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
             <div class="mt-3 bg-white border rounded d-flex flex-column justify-content-between flex-lg-row p-4" style="padding: 5px;">
                 <div>
                     <h4 class="fw-bold mb-2">{{doubt.title}}</h4>
-                    <p class="mb-0">Asked By {{doubt.author}}&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Asked On {{doubt.time}}</p>
+                    <p class="mb-0" style="font-size:12px;">Asked By {{doubt.author}} on {{doubt.time.date}}</p>
                 </div>
                 <div class="my-1"><a class="btn btn-primary fs-6 py-2 px-4" role="button" href="/discuss/qn/{{doubt.id}}">View</a></div>
             </div>
@@ -111,22 +111,22 @@
         </div>
     </section>
     <section></section>
-    <footer class="bg-primary-gradient mt-5">
+    <footer class="bg-primary-gradient">
         <div class="container py-4 py-lg-5">
             <div class="row justify-content-center">
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
                     <h3 class="fs-6 fw-bold">Services</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Study Resources</a></li>
-                        <li><a href="#">Doubt Discussion</a></li>
+                        <li><a href="/books">Study Resources</a></li>
+                        <li><a href="/discuss">Doubt Discussion</a></li>
                         <li><a href="#">Homework Lancing</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Developer</a></li>
+                        <li><a href="/#team-details">Team</a></li>
+                        <li><a href="/#team-details">Developer</a></li>
                         <li></li>
                     </ul>
                 </div>
