--- a/templates/discuss/question.html
+++ b/templates/discuss/question.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="/#our-services">Services</a></li>
                     <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link" href="/books">Resources</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">Discuss</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/discuss">Discuss</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Homework</a></li>
                 </ul>
                 {% if user.is_authenticated %}<a class="navbar-brand d-flex align-items-center" href="/profile"><img src="{% static 'usericon.png' %}" width="40" height="40"></a><a class="btn btn-primary shadow" role="button" href="/user/logout">Log Out</a>{% else %}<a class="btn btn-primary shadow" role="button" href="/user/loginpage">Log In</a>{% endif %}
@@ -38,6 +38,7 @@
                 <div class="col text-start" style="margin: 0px;margin-right: 0px;margin-left: 20px;">
                     <h3 class="fw-bolder text-muted">{{qn.title}}</h3>
                     <p class="text-black fw-bolder"><span class="fw-bold">Q - </span>{{qn.question}}</p>
+                    <p class="mb-0" style="font-size:12px;">{{qn.author}} , {{qn.time.date}}</p>
                 </div>
             </div>
         </div>
@@ -48,28 +49,28 @@
             <div class="row text-start">
                 <div class="col text-start" style="margin: 0px;margin-right: 0px;margin-left: 20px;">
                     <p class="text-black fw-normal"><span class="fw-bold">Solution : </span><br>{{soln.text}}
-                    <br><span class="author">Answered By {{soln.author}}&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Answered On {{soln.time}}</span></p>
+                    <br><span class="author" style="font-size:10px;">Answered By {{soln.author}} on {{soln.time.date}}</span></p>
                 </div>
             </div>
         </div>
         {% endfor %}
     </section>
-    <footer class="bg-primary-gradient mt-5">
+    <footer class="bg-primary-gradient">
         <div class="container py-4 py-lg-5">
             <div class="row justify-content-center">
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
                     <h3 class="fs-6 fw-bold">Services</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Study Resources</a></li>
-                        <li><a href="#">Doubt Discussion</a></li>
+                        <li><a href="/books">Study Resources</a></li>
+                        <li><a href="/discuss">Doubt Discussion</a></li>
                         <li><a href="#">Homework Lancing</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Developer</a></li>
+                        <li><a href="/#team-details">Team</a></li>
+                        <li><a href="/#team-details">Developer</a></li>
                         <li></li>
                     </ul>
                 </div>
